src/css/grabpress.css
/* ... */
#t #b .accordion{
    background-color: #000;
}
#t #b .accordion-group {
    border: 1px solid #2B2B2B;
}

#t #b a.accordion-toggle{
    background-color: #2B2B2B;
    color: #FFFFFF;
    font: 18px 'Gill Sans W01 Light';
    text-decoration: none;
}
#t #b a.accordion-toggle:hover{
    color: #FF0000;
    -webkit-box-shadow: 0px 0px 5px rgba(255, 0 , 0, 0.75);
    -moz-box-shadow: 0px 0px 5px rgba(255, 0 , 0, 0.75);
    box-shadow: 0px 0px 5px rgba(255, 0 , 0, 0.75);
    border-radius: 3px;
}
#t #b .accordion-inner {
     padding: 0;
}
#t #b .feeds{
    background: #FFF url( '../images/panel.png' ) repeat;
    box-shadow: 8px 8px 4px rgba(0, 0, 0, 0.25);
    display: inline-block;
    height: 484px !important;
    width: 468px !important;  
    float: right;  
    padding: 6px !important;
    margin: 8px !important;
}
#t #b .feeds a{
    text-decoration: none;
}
#t #b .feeds .panel{
    background: url("../images/inset.png") repeat-x scroll left bottom #FFFFFF;
    -moz-border-radius: 3px; 
    -webkit-border-radius: 3px; 
    border-radius: 3px; 
    margin: 10px 2px 2px 3px;
    padding-left: 0;
    padding-right: 0;
    padding: 0;
    height: 428px;
}
#t #b .feeds .table-hover{
     background: url("../images/inset.png") repeat-x scroll left bottom #FFFFFF;
}
#t #b table{
    border-bottom: none;
    margin-bottom: 0;
}
#t #b table thead{
    border-bottom: none;
}
#t #b table tbody{
    border-bottom: none;
}

#t #b table th {
    background-color: #818181;
    color: #FFF;
    text-align: center;
    border-right: 1px solid #5D5B5B;
    border-bottom: 1px solid #818181;
}
#t #b table th:last-child {
    border-right: none;
}
#t #b table td {
    color: #000;
    text-align: center;
    padding: 4px 10px;
    border-right: 1px solid #5D5B5B;
    height: 16px;
    border-bottom: none;
}
#t #b table td:first-child {
    text-align: left;
}
#t #b table td:last-child {
    border-right: none;
}
#t #b tr.even { background: #D3D3D3; }
#t #b tr.odd { background: #C0C0C0} 
#t #b .accordion-left {
    background: url("../images/accordion_left.png") repeat scroll 0 0 #000000;
    *background: none;
    width: 3px;
    *display: none;
}
#t #b .accordion-center {
    background: url("../images/accordion_center.png") repeat scroll 0 0 #000000;
}
#t #b .accordion-right {
    background: url("../images/accordion_right.png") repeat scroll 0 0 #000000;
    *background: none;
    width: 3px;
    *display: none;
}
#t #b h3 {
    padding: 5px 10px;
}

#t #b .tab-content{
    clear: both;
}
#t #b .accordion {
    clear: both;
}
#t #b .accordion-group {
    border-radius: 4px 4px 4px 4px;
    margin-bottom: 2px;
}
#t #b .accordion-heading {
    border-bottom: 0 none;
    background-color: #EEE;
}
#t #b .accordion-toggle {
    cursor: pointer;
}
#t #b .accordion-heading .accordion-toggle {
    display: block;
    padding: 8px 15px;
}
#t #b .collapse {
    height: 0;
    overflow: hidden;
    position: relative;
    transition: height 0.35s ease 0s;
}
#t #b .collapse.in {
    height: auto;
}

#t #b table th {
    background-color: #818181;
}
#t #b table .rowspan1{height:20px;}
#t #b table .rowspan2{height:60px;}
#t #b table .rowspan3{height:100px;}


.nano{
    height:198px;
}
.nano .content{
    margin:10px;
    right: -27px !important;
}
.nano .pane{
    margin:4px;
}
#t #b #btn-account-settings{
    border: 0 none;
    height: 33px;
    margin-left: 354px;
    margin-top: 6px;
    padding: 0;
    position: absolute;
    width: 15px;  
}
#t #b #btn-account-settings .accordion-left {
    background: url("../images/accordion_left.png") repeat-y scroll 0 0 #000000;
    height: 33px;
    left: 0;
    position: absolute;
    width: 3px;
}
#t #b #btn-account-settings .accordion-center {
    background: url("../images/accordion_center.png") repeat-x scroll 0 0 #000000;
    height: 33px;
    padding: 0 3px;
    width: 99px;
}
#t #b #btn-account-settings .accordion-right {
    background: url("../images/accordion_right.png") repeat-y scroll 0 0 #000000;
    height: 33px;
    position: absolute;
    right: -92px;
    top: 0;
    width: 3px;
}
#t #b #btn-account-settings a{
    color: #FFF;
    display: block;
    padding: 8px 0px 0px 5px;
}
#t #b td.watch{
    width: 70px;
}
#t #b .watch-on{
    background: url("../images/watch-on.png") no-repeat scroll 0 0;
    border: none;
    display: block;
    height: 14px !important;
    width: 15px !important;
    margin-right: 30px;
    margin-top: 4px;
    padding-top: 3px;
    text-indent: -3000px;
}
#t #b .watch-off{
    background: url("../images/watch-off.png") no-repeat scroll 0 0;
    border: none;
    display: block;
    height: 14px !important;
    width: 15px !important;
    margin-right: 30px;
    margin-top: 4px;
    padding-top: 3px;
    text-indent: -3000px;
}
#t #b td.feed-health-0 {
    background: url("../images/health-0.png") repeat-x scroll 2px 3px transparent;
    width: 40px;
}
#t #b td.feed-health-20 {
    background: url("../images/health-20.png") repeat-x scroll 2px 3px transparent;
    width: 40px;
}
#t #b td.feed-health-40 {
    background: url("../images/health-40.png") repeat-x scroll 2px 3px transparent;
    width: 40px;
}
#t #b td.feed-health-60 {
    background: url("../images/health-60.png") repeat-x scroll 2px 3px transparent;
    width: 40px;
}
#t #b td.feed-health-80 {
    background: url("../images/health-80.png") repeat-x scroll 2px 3px transparent;
    width: 40px;
}
#t #b td.feed-health-100 {
    background: url("../images/health-100.png") repeat-x scroll 2px 3px transparent;
    width: 40px;
}
#t #b .feeds .account-linked{
    background: url("../images/account-linked.png") no-repeat scroll 0 0 #000000;
    border: none;
    cursor: auto;
    height: 46px;
    width: 332px;
    margin-left: 3px;
    text-indent: -3000px;
}
/* ... */

